// To compile: protoc -I=. --go_out=. protector_object.proto

// Definition of protobufs for protected objects
syntax = "proto2";

package protected_objects;

message Object_id_message {
  required string obj_name                    = 1;
  optional int32 obj_epoch                    = 2;
}

message Object_message {
  required Object_id_message obj_id           = 1;
  optional string obj_type                    = 2;
  optional string obj_status                  = 3;
  optional string not_before                  = 4;
  optional string not_after                   = 5;
  optional bytes obj_val                      = 6;
}

message Protected_object_message {
  required Object_message protected_obj_id    = 1;
  optional Object_id_message protector_obj_id = 2;
}

message Object_store_message {
  repeated Object_message objects = 1;
}

message Protected_object_store_message {
  repeated Protected_object_message protected_objects = 1;
}

